# fast-api-bob-ross

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: README  env.py
alembic/data/: episodes.json  paint-colors.json  paintings.json  quotes.json  seasons.json
alembic/versions/: 2f97dad27dac_create_all_initial_tables.py  cfa6d2921adf_create_episodes.py
api/: episodes.py  misc.py  paintings.py  seasons.py
db/: db_setup.py
db/models/: episode.py  misc.py  painting.py  season.py
schemas/: episode.py  misc.py  paiting.py  season.py
