[tool.poetry]
name = "fast-api-bob-ross"
version = "0.1.0"
description = ""
authors = ["Gwendolyn Faraday <gwenfaraday@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
